--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <!-- Audio Section -->
         <audio controls>
-            <source src="audio/audio.mp3" type="audio/mp3">
-            Your browser does not support the audio element.
+            <source src="audio.mp3" type="audio/mp3">
+           
         </audio>
 
         <!-- Letter/Message Section -->
